@@ -19,17 +19,16 @@ perl_version 5.006002;
 readme_from 'Object.pm';
 recursive_author_tests('xt');
 requires 'Business::ISBN' => 0;
-requires 'DateTime' => 0;
 requires 'Error::Pure' => 0;
 requires 'List::MoreUtils' => 0;
 requires 'List::Util' => 0;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.07;
+requires 'Mo::utils::Date' => 0;
 requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/MARC-Convert-Wikidata-Object/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/MARC-Convert-Wikidata-Object';
 resources 'repository' => 'git://github.com/michal-josef-spacek/MARC-Convert-Wikidata-Object';
-test_requires 'DateTime' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Unicode::UTF8' => 0;
