@@ -1,8 +1,0 @@
-use strict;
-use warnings;
-
-use Test::NoWarnings;
-use Test::Pod::Coverage 'tests' => 2;
-
-# Test.
-pod_coverage_ok('MARC::Convert::Wikidata::Object::Utils', 'MARC::Convert::Wikidata::Object::Utils is covered.');
